@@ -1,4 +1,8 @@
 
+2018-07-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* common.c (cob_check_ref_mod): display maximum size on overflow
+
 2018-07-04  Edward Hart <edward.dan.hart@gmail.com>
 
 	* move.c (cob_move_display_to_edited): fixed bug #220 again; this time
